--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,9 @@
   "customizations": {
     "vscode": {
       "extensions": [
-        "ms-python.python"
+        "ms-python.python",
+        "ms-python.black-formatter",
+        "ms-python.isort"
       ]
       // "settings": {
       //   "editor.formatOnPaste": true,
